--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,35 +7,37 @@
     tools:context="com.moment.themoment.MainActivity">
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="172dp"
+        android:id="@+id/JoinRoom"
+        android:layout_width="225dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="150dp"
         android:text="@string/Join_Room_Button"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
+        android:id="@+id/JRR"
+        android:layout_width="225dp"
+        android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:text="@string/Join_Random_Room_Button"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/JoinRoom" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/CreateRoom"
+        android:layout_width="225dp"
+        android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:text="@string/Create_Room_Key"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/JRR" />
 </android.support.constraint.ConstraintLayout>
