--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="225dp"
         android:layout_height="0dp"
         android:layout_marginTop="150dp"
+        android:onClick="joinRoom"
         android:text="@string/Join_Room_Button"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
