Added join random room and create room activity. Connected with main activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         android:layout_width="225dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
+        android:onClick="joinRandomRoom"
         android:text="@string/Join_Random_Room_Button"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -36,6 +37,7 @@
         android:layout_width="225dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
+        android:onClick="CreateRoom"
         android:text="@string/Create_Room_Key"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
