--- a/app/src/main/res/layout/activity_create_room.xml
+++ b/app/src/main/res/layout/activity_create_room.xml
@@ -24,7 +24,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="85dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
@@ -42,10 +41,12 @@
 
     <EditText
         android:id="@+id/editText4"
+        android:labelFor="@id/editText4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="85dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="@string/RRNumber"
         android:ems="10"
         android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
