--- a/app/src/main/res/layout/activity_vote_on_claim.xml
+++ b/app/src/main/res/layout/activity_vote_on_claim.xml
@@ -6,4 +6,23 @@
     android:layout_height="match_parent"
     tools:context="com.moment.themoment.VoteOnClaim">
 
+    <RadioButton
+        android:id="@+id/trueButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/trueClaim"
+        android:textColor="@android:color/background_dark"
+        android:textSize="18sp"
+        tools:layout_editor_absoluteX="162dp"
+        tools:layout_editor_absoluteY="239dp" />
+
+    <RadioButton
+        android:id="@+id/FalseButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/falseClaim"
+        android:textColor="@android:color/background_dark"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@+id/trueButton"
+        tools:layout_editor_absoluteX="160dp" />
 </android.support.constraint.ConstraintLayout>
