--- a/app/src/main/res/layout/activity_vote_on_claim.xml
+++ b/app/src/main/res/layout/activity_vote_on_claim.xml
@@ -13,9 +13,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="ToggleButton"
-        android:textOff="False"
-        android:textOn="True"
+        android:text="@string/T_or_F"
+        android:textOff="@string/False"
+        android:textOn="@string/True"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
@@ -40,7 +40,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/claim_present"
+        android:text="@string/Claim"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
