--- a/app/src/main/res/layout/activity_write_claim.xml
+++ b/app/src/main/res/layout/activity_write_claim.xml
@@ -43,7 +43,8 @@
         app:layout_constraintTop_toBottomOf="@+id/theClaim" />
 
     <RadioGroup
-        android:layout_width="wrap_content"
+        android:id="@+id/TrueFalseGroup"
+        android:layout_width="75dp"
         android:layout_height="87dp"
         android:layout_marginTop="260dp"
         android:duplicateParentState="false"
@@ -55,7 +56,9 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <RadioButton
-            android:id="@+id/radioButton"
+            android:id="@+id/TrueButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:duplicateParentState="false"
             android:text="@string/trueClaim"
             android:textSize="18sp"
@@ -64,15 +67,15 @@
             app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
         <RadioButton
-            android:id="@+id/radioButton2"
-            android:layout_width="wrap_content"
+            android:id="@+id/FalseButton"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="@string/falseClaim"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/radioButton" />
+            app:layout_constraintTop_toBottomOf="@+id/TrueButton" />
     </RadioGroup>
 
     <Button
@@ -81,6 +84,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:layout_marginEnd="16dp"
+        android:onClick="saveClaim"
         android:text="@string/confirm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
