add user to the "activity_create_room"

--- a/app/src/main/res/layout/activity_join_room.xml
+++ b/app/src/main/res/layout/activity_join_room.xml
@@ -8,13 +8,14 @@
 
     <EditText
         android:id="@+id/userNameInput"
-        android:labelFor="@+id/userNameInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="85dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="@string/RRNumber"
         android:ems="10"
         android:inputType="textPersonName"
+        android:labelFor="@+id/userNameInput"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
