--- a/app/src/main/res/layout/activity_join_random_room.xml
+++ b/app/src/main/res/layout/activity_join_random_room.xml
@@ -7,19 +7,19 @@
     tools:context="com.moment.themoment.JoinRandomRoomActivity">
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/emptyRoomINfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="62dp"
-        android:layout_marginStart="62dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
-        android:text=""
+        android:text="@string/RRNumber"
+        android:textAlignment="center"
         android:textColor="@android:color/background_dark"
-        android:textSize="14sp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4"
-        tools:text="@string/RRNumber" />
+        app:layout_constraintTop_toBottomOf="@+id/saveUsername" />
 
     <TextView
         android:id="@+id/roomNumber"
@@ -31,10 +31,10 @@
         android:text=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/emptyRoomINfo" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/joinButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
@@ -71,7 +71,7 @@
         app:layout_constraintTop_toBottomOf="@+id/UsernameText" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/saveUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
