WaitForPlayersActivity, fixed timer and read to/from database. Also spent a lot of time debugging and fixed bugs in JoinRoomActivity causing errors in this part, remember to make sure your code works before pushing!! Trellocard: "wait for players - setup necessary functionality and network coms".

--- a/app/src/main/res/layout/activity_wait_for_players.xml
+++ b/app/src/main/res/layout/activity_wait_for_players.xml
@@ -16,7 +16,7 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/countDown" />
+        app:layout_constraintTop_toBottomOf="@+id/timeCount" />
 
     <TextView
         android:id="@+id/textView9"
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toBottomOf="@+id/numberOfPlayersJoined" />
 
     <TextView
-        android:id="@+id/countDown"
+        android:id="@+id/timeCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
