testar en 3e gång

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#1e40fc</color>
+    <color name="colorPrimaryDark">#54afff</color>
     <color name="colorAccent">#408cff</color>
     <color name="accent_material_light">#003df5</color>
     <color name="foreground_material_light">#0c3891</color>
