added last things for resultpage functionality - player method for comparing claim id with clients - added functionality to loop and block player if its players claim being voted on - changed exit button to remove player from room and if last out room also from DB - room added get mnethdo for claimNO - added set methdo for claimNO - added server call function for removing player and handling callback - commented some methods

--- a/app/src/main/res/layout/activity_result_page.xml
+++ b/app/src/main/res/layout/activity_result_page.xml
@@ -85,7 +85,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="24dp"
         android:layout_weight="1"
-        android:onClick="JumptoMainMenu"
+        android:onClick="exitGame"
         android:text="@string/Quit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
